# qa_guru_python_14_16

./: pyproject.toml
