[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = ["Andrey Zavrichko <andrey.zavrichko@yandex.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "8.2.2"
selene = "2.0.0rc9"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dev-dependencies]
pylint = "^3.2.6"